--- a/BuildInvisiClues/json/Seastalker.json
+++ b/BuildInvisiClues/json/Seastalker.json
@@ -1,5 +1,6 @@
 {
     "revision": 1.0,
+	"uppercaseHeaders": true,
 	"header": {
 		"title": "Seastalker",
 		"year": "1984",
@@ -600,6 +601,7 @@
 				{
 					"title": "Points/Actions",
 					"orderedList": false,
+					"noPadding": true,
 					"columnHeaders": false,
 					"columns": [
 						{"width": "10%", "align": "right"},
@@ -644,6 +646,7 @@
 				{
 					"title": "Have you ever:",
 					"orderedList": false,
+					"noPadding": true,
 					"answers": [
 						"read the diagram on the workbench?",
 						"told Tip to leave the sub and then closed the hatch?",
